load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")
load("//tools/project:build_defs.bzl", "project")

project()

scala_binary(
    name = "streambot-jvm",
    srcs = glob([
        "src/main/scala/**/*.scala",
    ]),
    data = ["//jvm-toxcore-c:native"],
    jvm_flags = ["-Djava.library.path=jvm-toxcore-c"],
    main_class = "im.tox.streambot.StreamBot",
    resources = glob([
        "src/main/resources/**/*",
    ]),
    deps = [
        "//jvm-toxcore-api",
        "//jvm-toxcore-c",
        "@maven//:log4j_log4j",
        "@maven//:org_bytedeco_javacpp",
        "@maven//:org_bytedeco_javacpp_presets_ffmpeg",
        "@org_bytedeco_javacpp_presets_ffmpeg_platform//jar",
        "@maven//:org_bytedeco_javacpp_presets_opencv",
        "@org_bytedeco_javacpp_presets_opencv_platform//jar",
        "@maven//:org_bytedeco_javacv",
        "@maven//:org_jetbrains_annotations",
        "@maven//:org_slf4j_slf4j_log4j12",
    ],
)
